--- a/cricket.html
+++ b/cricket.html
@@ -16,11 +16,12 @@
             background-color: red;
             position: relative;
             left: 650px;
-            bottom: 80px;;
+            bottom: 80px;
+            transition: transform 1s ease-out .2s;
 
         }
         .field:hover .ball{
-            transform: translate(500px);
+            transform: translate(700px, 100px);
         }
         .bat{
             transition: transform .2s,  ease-in;
